Implement Reference Tool selection detection

While commit 6e8224c52025fa1bf8508c3d4a2f98ecd4964019 implemented the
correct logic, it is only valid if the current tool is the Reference
Image tool.

There's a method for just this purpose, KoToolBase::hasSelection(), but
the existing flow stems from SelectionHandler::hasSelection, which
operates only with shapes. So this commit implements the
corresponding override and changes the check to query the current tool
instead.

BUG: 454515

CCMAIL: shzam@sdf.org
(cherry picked from commit df76bd6ccc5e3c450dcf81612e28f4598c397c73)