libs/ui/actions/kis_selection_action_factories.cpp
@@ -269,17 +269,16 @@ void KisCutCopyActionFactory::run(bool willCut, bool makeSharpClip, KisViewManag
 
     // Reference layers is a fake node, so it isn't added to the layer stack, this results in KisSelectedShapesProxy not
     // being aware of the active shapeManager and its selected shapes.
-    const auto hasReferenceImageSelected = [&]() {
-        KisReferenceImagesLayerSP refLayer = view->document()->referenceImagesLayer();
-        return refLayer && refLayer->shapeManager()->selection()->count();
-    };
+    const auto currentToolHasSelection =
+        view->canvasBase()->toolProxy()->hasSelection();
 
-    const bool haveShapesSelected = view->selectionManager()->haveShapesSelected() || hasReferenceImageSelected();
+    const bool haveShapesSelected =
+        view->selectionManager()->haveShapesSelected();
 
     KisNodeSP node = view->activeNode();
     KisSelectionSP selection = view->selection();
 
-    if (!makeSharpClip && haveShapesSelected) {
+    if (!makeSharpClip && (haveShapesSelected || currentToolHasSelection)) {
         // XXX: "Add saving of XML data for Cut/Copy of shapes"
 
         KisImageBarrierLocker locker(image);
